[STLIB] Now use sphinx to generate the documentation from source code.
The idea is then to upload the documentation to readthecode.io

Cheers.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,14 +10,14 @@ if(!SofaPython_FOUND)
     message(FATAL_ERROR "-- STLIB requires the SofaPython plugin to be activated.")
 endif()
 
-
 set(HEADER_FILES src/initPlugin.h)
 set(SOURCE_FILES src/initPlugin.cpp)
 
 # Config files and install rules for pythons scripts
 sofa_set_python_directory(${PROJECT_NAME} "python")
 
-file(GLOB_RECURSE RESOURCE_FILES  "*.md" "*.psl" "*.py" "*.pyscn" "*.scn")
+
+file(GLOB_RECURSE RESOURCE_FILES  "*.md" "*.psl" "*.py" "*.pyscn" "*.scn" "*.rst")
 
 add_library(${PROJECT_NAME} SHARED ${HEADER_FILES} ${SOURCE_FILES} ${RESOURCE_FILES})
 
