[CMake] CLEAN CMakeLists.txt

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,28 +5,10 @@ cmake_policy(SET CMP0048 NEW)
 
 project(STLIB VERSION 1.0)
 
-## Default build type
-set(CMAKE_BUILD_TYPE "Release")
-
-## Change default install prefix
-if(CMAKE_INSTALL_PREFIX_INITIALIZED_TO_DEFAULT)
-    set(CMAKE_INSTALL_PREFIX ${CMAKE_BINARY_DIR}/install CACHE PATH "Install path prefix, prepended onto install directories." FORCE)
-endif()
-message(STATUS "Install prefix: ${CMAKE_INSTALL_PREFIX}")
-
-## Set the output directories globally
-set(ARCHIVE_OUTPUT_DIRECTORY lib)
-set(RUNTIME_OUTPUT_DIRECTORY bin)
-if(WIN32)
-    set(LIBRARY_OUTPUT_DIRECTORY ${RUNTIME_OUTPUT_DIRECTORY})
-else()
-    set(LIBRARY_OUTPUT_DIRECTORY ${ARCHIVE_OUTPUT_DIRECTORY})
-endif()
-set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/${ARCHIVE_OUTPUT_DIRECTORY})
-set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/${RUNTIME_OUTPUT_DIRECTORY})
-set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/${LIBRARY_OUTPUT_DIRECTORY})
-
+find_package(SofaFramework REQUIRED)
 find_package(SofaPython REQUIRED)
+
+include(cmake/environment.cmake)
 
 set(HEADER_FILES src/initPlugin.h)
 set(SOURCE_FILES src/initPlugin.cpp)
@@ -37,8 +19,6 @@ file(GLOB_RECURSE RESOURCE_FILES  "*.md" "*.psl" "*.py" "*.pyscn" "*.scn" "*.rst
 sofa_set_python_directory(${PROJECT_NAME} "python")
 
 add_library(${PROJECT_NAME} SHARED ${HEADER_FILES} ${SOURCE_FILES} ${RESOURCE_FILES})
-set_target_properties(${PROJECT_NAME} PROPERTIES PUBLIC_HEADER "${HEADER_FILES}")
-
 set_target_properties(${PROJECT_NAME} PROPERTIES COMPILE_FLAGS "-DSOFA_BUILD_STLIB")
 target_link_libraries(${PROJECT_NAME} SofaCore SofaPython)
 target_include_directories(${PROJECT_NAME} PUBLIC "$<BUILD_INTERFACE:${CMAKE_BINARY_DIR}/include>")
@@ -46,41 +26,11 @@ target_include_directories(${PROJECT_NAME} PUBLIC "$<INSTALL_INTERFACE:include>"
 
 ## Install rules for the library and headers; CMake package configurations files
 
-sofa_create_package(STLIB ${PROJECT_VERSION} ${PROJECT_NAME} STLIB "src")
+sofa_generate_package(NAME STLIB VERSION ${PROJECT_VERSION} TARGETS ${PROJECT_NAME}
+    INCLUDE_INSTALL_DIR STLIB
+    INCLUDE_SOURCE_DIR "src")
 
 install(DIRECTORY docs DESTINATION share/sofa/${PROJECT_NAME})
 install(FILES "README.md" "LICENSE" DESTINATION .)
 
-
-#######################
-# CPack configuration #
-#######################
-set(CPACK_GENERATOR ZIP)
-set(CPACK_PACKAGE_VERSION "${PROJECT_VERSION}")
-set(CPACK_PACKAGE_NAME "${PROJECT_NAME} v${CPACK_PACKAGE_VERSION}")
-set(CPACK_PACKAGE_VENDOR "Defrost team")
-set(CPACK_PACKAGE_CONTACT "https://project.inria.fr/softrobot/contact/")
-set(CPACK_PACKAGE_DESCRIPTION "SOFA scene templates.")
-set(CPACK_PACKAGE_DESCRIPTION_FILE "${CMAKE_SOURCE_DIR}/README.md")
-set(CPACK_PACKAGE_HOMEPAGE_URL "https://project.inria.fr/softrobot")
-set(CPACK_PACKAGE_FILE_NAME "${PROJECT_NAME}_v${CPACK_PACKAGE_VERSION}")
-if(WIN32)
-#    set(CPACK_PACKAGE_INSTALL_DIRECTORY "SOFA\\\\v${CPACK_PACKAGE_VERSION}\\\\plugins\\\\${PROJECT_NAME}")
-    if("${CMAKE_SYSTEM_PROCESSOR}" STREQUAL "AMD64")
-        set(CPACK_PACKAGE_FILE_NAME "${CPACK_PACKAGE_FILE_NAME}_Win64")
-    else()
-        set(CPACK_PACKAGE_FILE_NAME "${CPACK_PACKAGE_FILE_NAME}_Win32")
-    endif()
-elseif(UNIX)
-    set(CPACK_PACKAGE_INSTALL_DIRECTORY "SOFA/v${CPACK_PACKAGE_VERSION}/plugis/${PROJECT_NAME}")
-    if(APPLE)
-        set(CPACK_PACKAGE_FILE_NAME "${CPACK_PACKAGE_FILE_NAME}_MacOS")
-    else()
-        set(CPACK_PACKAGE_FILE_NAME "${CPACK_PACKAGE_FILE_NAME}_Linux")
-    endif()
-endif()
-set(CPACK_RESOURCE_FILE_LICENSE "${CMAKE_SOURCE_DIR}/LICENSE")
-set(CPACK_RESOURCE_FILE_README "${CMAKE_SOURCE_DIR}/README.md")
-set(CPACK_RESOURCE_FILE_WELCOME "${CMAKE_SOURCE_DIR}/README.md")
-
-include(CPack)
+include(cmake/packaging.cmake)
