--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,29 +1,39 @@
 cmake_minimum_required(VERSION 3.5)
-project(STLIB VERSION 1.0)
+project(STLIB VERSION 3.0)
 
 include(cmake/environment.cmake)
 
 find_package(SofaFramework REQUIRED)
-find_package(SofaPython REQUIRED)
+find_package(SofaPython QUIET)
+find_package(SofaPython3 QUIET)
+
+if(SofaPython3_FOUND)
+    message("-- Found SofaPython3")
+    SP3_add_python_package(
+        SOURCE_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/python3/src/stlib3
+        TARGET_DIRECTORY stlib3
+    )
+endif()
+
+if(SofaPython_FOUND)
+    message("-- Found SofaPython")
+    sofa_install_pythonscripts(PLUGIN_NAME ${PROJECT_NAME} PYTHONSCRIPTS_SOURCE_DIR "python" PYTHONSCRIPTS_INSTALL_DIR "python")
+endif()
 
 set(HEADER_FILES src/initPlugin.h)
 set(SOURCE_FILES src/initPlugin.cpp)
 
 file(GLOB_RECURSE RESOURCE_FILES  "*.md" "*.psl" "*.py" "*.pyscn" "*.scn" "*.rst")
 
-# Config files and install rules for pythons scripts
-sofa_install_pythonscripts(PLUGIN_NAME ${PROJECT_NAME} PYTHONSCRIPTS_SOURCE_DIR "python" PYTHONSCRIPTS_INSTALL_DIR "python")
-
 add_library(${PROJECT_NAME} SHARED ${HEADER_FILES} ${SOURCE_FILES} ${RESOURCE_FILES})
 set_target_properties(${PROJECT_NAME} PROPERTIES COMPILE_FLAGS "-DSOFA_BUILD_STLIB")
 set_target_properties(${PROJECT_NAME} PROPERTIES DEBUG_POSTFIX "_d")
-target_link_libraries(${PROJECT_NAME} SofaCore SofaPython)
+target_link_libraries(${PROJECT_NAME} SofaCore)
 
 ## Install rules for the library and headers; CMake package configurations files
-
-sofa_generate_package(
-    NAME STLIB 
-    VERSION ${PROJECT_VERSION} 
+sofa_create_package_with_targets(
+    PACKAGE_NAME STLIB
+    PACKAGE_VERSION ${PROJECT_VERSION}
     TARGETS ${PROJECT_NAME}
     INCLUDE_INSTALL_DIR STLIB
     INCLUDE_SOURCE_DIR "src"
