[CMake] ADD AUTO_SET_TARGET_PROPERTIES

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -46,7 +46,7 @@ target_link_libraries(${PROJECT_NAME} SofaCore)
 sofa_create_package_with_targets(
     PACKAGE_NAME STLIB
     PACKAGE_VERSION ${PROJECT_VERSION}
-    TARGETS ${PROJECT_NAME}
+    TARGETS ${PROJECT_NAME} AUTO_SET_TARGET_PROPERTIES
     INCLUDE_INSTALL_DIR STLIB
     INCLUDE_SOURCE_DIR "src"
     RELOCATABLE "plugins"
