Move all files.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,10 +4,8 @@ project(STLIB VERSION 3.0)
 include(cmake/environment.cmake)
 
 find_package(SofaFramework REQUIRED)
-find_package(SofaPython QUIET)
-find_package(SofaPython3 QUIET)
+find_package(SofaPython3 REQUIRED)
 
-set(SofaPythonAny_FOUND FALSE)
 if(SofaPython3_FOUND)
     message("-- Found SofaPython3")
     SP3_add_python_package(
@@ -21,16 +19,8 @@ if(SofaPython3_FOUND)
     set(SofaPythonAny_FOUND TRUE)
 endif()
 
-if(SofaPython_FOUND)
-    message("-- Found SofaPython")
-    sofa_install_pythonscripts(PLUGIN_NAME ${PROJECT_NAME} PYTHONSCRIPTS_SOURCE_DIR "python" PYTHONSCRIPTS_INSTALL_DIR "python")
-    set(SofaPythonAny_FOUND TRUE)
-endif()
 
-if(!SofaPythonAny_FOUND)
-    message("-- Missing a python implementation (SofaPython or SofaPython3). Disabling the plugin")
-    return()
-endif()
+find_package(SPLIB REQUIRED)
 
 set(HEADER_FILES src/cpp/stlib/initPlugin.h)
 set(SOURCE_FILES src/cpp/stlib/initPlugin.cpp)
