--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,7 +13,7 @@ jobs:
       fail-fast: false
       matrix:
         os: [ubuntu-20.04, macos-10.15, windows-2019]
-        sofa_branch: [master, v21.12, v21.06, v20.12]
+        sofa_branch: [master]
 
     steps:
       - name: Setup SOFA and environment
@@ -71,34 +71,4 @@ jobs:
         with:
           name: STLIB_${{ steps.sofa.outputs.run_branch }}_for-SOFA-${{ steps.sofa.outputs.sofa_version }}_${{ runner.os }}
           path: ${{ env.WORKSPACE_INSTALL_PATH }}
-
-  deploy:
-    name: Deploy artifacts
-    if: always() && startsWith(github.ref, 'refs/heads/') # we are on a branch (not a PR)
-    needs: [build-and-test]
-    runs-on: ubuntu-latest
-    continue-on-error: true
-    steps:
-      - name: Get artifacts
-        uses: actions/download-artifact@v2
-        with:
-          path: artifacts
-
-      - name: Zip artifacts
-        shell: bash
-        run: |
-          cd $GITHUB_WORKSPACE/artifacts
-          for artifact in *; do
-            zip $artifact.zip -r $artifact/*
-          done
-      
-      - name: Upload release
-        uses: softprops/action-gh-release@v1
-        with:
-          name: ${{ github.ref_name }}
-          tag_name: release-${{ github.ref_name }}
-          fail_on_unmatched_files: true
-          files: |
-            artifacts/STLIB_*_Linux.zip
-            artifacts/STLIB_*_Windows.zip
-            artifacts/STLIB_*_macOS.zip
+          
