--- a/.github/workflows/nightly-build.yml
+++ b/.github/workflows/nightly-build.yml
@@ -25,7 +25,7 @@ jobs:
       - name: Install Qt5
         shell: bash
         run: |
-            sudo apt-get install qt5-default
+            sudo apt-get install qt5-default libqt5charts5-dev libqt5webengine5
 
       - name: Checkout source code
         uses: actions/checkout@v2
