[CMake] CLEAN unneeded SofaPython3 dependency

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,33 +4,6 @@ project(STLIB VERSION 3.0)
 include(cmake/environment.cmake)
 
 find_package(SofaFramework REQUIRED)
-find_package(SofaPython QUIET)
-find_package(SofaPython3 QUIET)
-
-set(SofaPythonAny_FOUND FALSE)
-if(SofaPython3_FOUND)
-    message("-- Found SofaPython3")
-    SP3_add_python_package(
-        SOURCE_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/python3/src/splib3
-        TARGET_DIRECTORY splib3
-    )
-    SP3_add_python_package(
-        SOURCE_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/python3/src/stlib3
-        TARGET_DIRECTORY stlib3
-    )
-    set(SofaPythonAny_FOUND TRUE)
-endif()
-
-if(SofaPython_FOUND)
-    message("-- Found SofaPython")
-    sofa_install_pythonscripts(PLUGIN_NAME ${PROJECT_NAME} PYTHONSCRIPTS_SOURCE_DIR "python" PYTHONSCRIPTS_INSTALL_DIR "python")
-    set(SofaPythonAny_FOUND TRUE)
-endif()
-
-if(!SofaPythonAny_FOUND)
-    message("-- Missing a python implementation (SofaPython or SofaPython3). Disabling the plugin need that.")
-    return()
-endif()
 
 set(HEADER_FILES src/initPlugin.h)
 set(SOURCE_FILES src/initPlugin.cpp)
@@ -54,5 +27,29 @@ sofa_create_package_with_targets(
 
 install(DIRECTORY docs DESTINATION share/sofa/${PROJECT_NAME})
 install(FILES "README.md" "LICENSE" DESTINATION .)
+
+# Install python2 scripts (macro defined in SOFA)
+sofa_install_pythonscripts(PLUGIN_NAME ${PROJECT_NAME} PYTHONSCRIPTS_SOURCE_DIR "python" PYTHONSCRIPTS_INSTALL_DIR "python")
+
+# Install python3 scripts (macro defined in SofaPython3)
+find_file(SofaPython3Tools NAMES "SofaPython3/lib/cmake/SofaPython3/SofaPython3Tools.cmake")
+if(SofaPython3Tools)
+    message("-- Found SofaPython3Tools. Python3 packages will be installed.")
+    include(${SofaPython3Tools})
+    set(SP3_PYTHON_PACKAGES_DIRECTORY "python3/site-packages")
+else()
+    # try again with the find_package mechanism
+    find_package(SofaPython3 COMPONENTS Plugin QUIET) # only to get SofaPython3Tools.cmake
+endif()
+if(SofaPython3Tools OR SofaPython3_FOUND)
+    SP3_add_python_package(
+        SOURCE_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/python3/src/splib3
+        TARGET_DIRECTORY splib3
+    )
+    SP3_add_python_package(
+        SOURCE_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/python3/src/stlib3
+        TARGET_DIRECTORY stlib3
+    )
+endif()
 
 include(cmake/packaging.cmake)
