--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,7 +3,7 @@ project(STLIB VERSION 3.0)
 
 include(cmake/environment.cmake)
 
-find_package(SofaFramework REQUIRED)
+find_package(Sofa.Config REQUIRED)
 
 set(HEADER_FILES src/initPlugin.h)
 set(SOURCE_FILES src/initPlugin.cpp)
@@ -13,7 +13,7 @@ file(GLOB_RECURSE RESOURCE_FILES  "*.md" "*.psl" "*.py" "*.pyscn" "*.scn" "*.rst
 add_library(${PROJECT_NAME} SHARED ${HEADER_FILES} ${SOURCE_FILES} ${RESOURCE_FILES})
 set_target_properties(${PROJECT_NAME} PROPERTIES COMPILE_FLAGS "-DSOFA_BUILD_STLIB")
 set_target_properties(${PROJECT_NAME} PROPERTIES DEBUG_POSTFIX "_d")
-target_link_libraries(${PROJECT_NAME} SofaCore)
+target_link_libraries(${PROJECT_NAME} Sofa.Config)
 
 ## Install rules for the library and headers; CMake package configurations files
 sofa_create_package_with_targets(
