--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,8 +12,8 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [ubuntu-20.04, macos-10.15, windows-2019]
-        sofa_branch: [master]
+        os: [ubuntu-20.04, macos-11, windows-2019]
+        sofa_branch: [master, v22.12]
 
     steps:
       - name: Setup SOFA and environment
